# OpenCV-Projects-cpp-python

./: .gitignore  README.md
Blurring-faces-yolo-sam/: main.ipynb
Color-based-object-detection-gui/: README.md
DeepLearning-Grounding-DINO/: README.md  grounding_dino.ipynb
Depth-DepthAnythingV2/: README.md  depth_map_generation.ipynb
Detect-YOLO-Segment-SAM/: README.md
ImageClassification-ViT(VisionTransformer)-model-training/: README.md  classification.ipynb
ImageClassification-pytorch-model-training/: README.md  main.ipynb  process_dataset.ipynb
ImageClassification-tensorflow-model-training/: README.md  main.ipynb  process_data.ipynb
OCR-Text-Extraction/: README.md
OCR-pytesseract-text-extraction/: README.md  extracted-text.txt  text-extraction-pages-documents.ipynb
ObjecDetection-DETR/: README.md  inference_pretrained.ipynb  main.ipynb
ObjectDetection-faster-rcnn-model-training/: README.md
ObjectDetection-yolo-cpp-inference/: README.md
ObjectDetection-yolo-gui/: yolo_detection_gui.py
ObjectDetection-yolo-nas-model-training/: README.md  Train-YoloNAS.ipynb
ObjectTracking-ORB/: CMakeLists.txt  README.md  orb-tracking.cpp
ObjectTracking-SIFT/: CMakeLists.txt  README.md  sift-tracking.cpp  sift-tracking.py
ObjectTracking-background-subtraction/: CMakeLists.txt  README.md  background-subtraction-tracking.cpp  background-subtraction-tracking.py
ObjectTracking-fast/: README.md  fast_tracking.cpp  fast_tracking.py
ObjectTracking-kalman/: README.md  (+2 more)
YOLO-inference-cpp/: CMakeLists.txt  README.md  object_detection.cpp
(+48 files in other folders)
